--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -30,7 +30,7 @@
 	font-display: swap;
 }
 body {
-	font-family: 'Atkinson', sans-serif;
+	font-family: "Pompiere", 'Atkinson', sans-serif;
 	margin: 0;
 	padding: 0;
 	text-align: left;
@@ -57,6 +57,7 @@ h6 {
 	margin: 0 0 0.5rem 0;
 	color: rgb(var(--black));
 	line-height: 1.2;
+	font-family: "Playfair Display", sans-serif;
 }
 h1 {
 	font-size: 3.052em;
